[package]
name = "rustloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

[dependencies]
winapi = {version="0.3.9", features = ["winuser","psapi", "heapapi", "errhandlingapi", "debugapi", "processthreadsapi", "memoryapi", "winnt", "winbase", "libloaderapi"] }
obfstr = "0.4.0"
kernel32-sys = "0.2.2"
ntapi = "0.4.1"
hex = "0.4.3"
clap = "3.2.19"  # Asegúrate de usar la última versión compatible
rand = "0.8.5"

[[bin]]
name = "loader"
path = "src/main.rs"

[[bin]]
name = "encoding"
path = "src/cipher.rs"

