[package]
name = "rustloader"
version = "0.2.0"
edition = "2021"
description = "Advanced shellcode loader with anti-debugging and evasion techniques"
authors = ["3xploit666"]
license = "MIT"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
winapi = { version = "0.3.9", features = [
    "winuser", "psapi", "heapapi", "errhandlingapi",
    "debugapi", "processthreadsapi", "memoryapi",
    "winnt", "winbase", "libloaderapi"
] }
obfstr = "0.4.0"
kernel32-sys = "0.2.2"
ntapi = "0.4.1"
hex = "0.4.3"
clap = "3.2.19"
rand = "0.8.5"

[[bin]]
name = "loader"
path = "src/main.rs"

[[bin]]
name = "encoding"
path = "src/cipher.rs"
